[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/icons.png" type="Texture" id=1]
[ext_resource path="res://textures/theme.png" type="Texture" id=2]
[ext_resource path="res://scripts/item.gd" type="Script" id=3]
[ext_resource path="res://scripts/changable_label.gd" type="Script" id=4]
[ext_resource path="res://textures/mode.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 8, 0, 8, 8 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 12, 12 )

[node name="Control" type="Control"]
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="Node2D" type="Node2D" parent="."]

[node name="item" type="Panel" parent="Node2D"]
margin_right = 196.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Node2D/item"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 1
text = "item"
valign = 1
script = ExtResource( 4 )

[node name="LineEdit" type="LineEdit" parent="Node2D/item"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureButton2" type="TextureButton" parent="Node2D/item"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -6.0
margin_right = -20.0
margin_bottom = 6.0
rect_min_size = Vector2( 12, 12 )
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 3

[node name="status" type="TextureButton" parent="Node2D/item"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -6.0
margin_right = -4.0
margin_bottom = 6.0
rect_min_size = Vector2( 12, 12 )
texture_normal = SubResource( 6 )
expand = true
stretch_mode = 3

[node name="Node2D" type="Node2D" parent="Node2D/item/status"]
z_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/item/status/Node2D"]

[connection signal="finish" from="Node2D/item/Label" to="Node2D/item" method="_on_Label_finish"]
[connection signal="focus_exited" from="Node2D/item/LineEdit" to="Node2D/item/Label" method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="Node2D/item/LineEdit" to="Node2D/item/Label" method="_on_LineEdit_text_entered"]
[connection signal="button_down" from="Node2D/item/status" to="Node2D/item" method="_on_status_button_down"]
[connection signal="button_up" from="Node2D/item/status" to="Node2D/item" method="_on_status_button_up"]
